<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="progress_bar_test_tag">progress bar test tag</string>
</resources>